Wrapped bootstrap.css in a body.factlink-site which (I hope) fixes the specificity issues

--- a/core/app/assets/stylesheets/bootstrap.css.less
+++ b/core/app/assets/stylesheets/bootstrap.css.less
@@ -6,58 +6,58 @@
 // OVERWRITING DEFAULT BOOTSTRAP LINKS
 // -----
 
-input, textarea, .navbar-search .search-query, p {
-  .base-text(13px);
-}
-.btn {
-  .base-text();
-  font-weight: normal;
-}
-.tooltip {
-  font-family: @baseFontFamily;
-}
+body.factlink-site {
+  input, textarea, .navbar-search .search-query, p {
+    .base-text(13px);
+  }
+  .btn {
+    color: @baseFontColor;
+    font-weight: normal;
+    font-size: @baseFontSize;
+    padding: 1px 5px;
+  }
+  .tooltip {
+    font-family: @baseFontFamily;
+  }
 
-// FORM FIELD FEEDBACK STATES
-// --------------------------
+  // FORM FIELD FEEDBACK STATES
+  // --------------------------
 
-// Warning
-.control-group.warning {
-  .formFieldState(@warningText, @warningText, @warningBackground);
-}
-// Error
-.control-group.error, .control-group .field_with_errors {
-  .formFieldState(@errorText, @errorText, @errorBackground);
-}
-// Success
-.control-group.success {
-  .formFieldState(@successText, @successText, @successBackground);
-}
+  // Warning
+  .control-group.warning {
+    .formFieldState(@warningText, @warningText, @warningBackground);
+  }
+  // Error
+  .control-group.error, .control-group .field_with_errors {
+    .formFieldState(@errorText, @errorText, @errorBackground);
+  }
+  // Success
+  .control-group.success {
+    .formFieldState(@successText, @successText, @successBackground);
+  }
 
-.form-actions {
-  background-color: transparent;
-}
+  .form-actions {
+    background-color: transparent;
+  }
 
-.btn-primary,
-.btn-primary:hover {
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    color: #ffffff;
-}
-.btn-primary {
-  #gradient > .vertical(#669BBB, @linkColor);
-}
-.btn-primary:hover,
-.btn-primary:active,
-.btn-primary.active,
-.btn-primary.disabled,
-.btn-primary[disabled] {
-	background-color: @linkColor;
-}
+  .btn-primary,
+  .btn-primary:hover {
+      text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+      color: #ffffff;
+  }
+  .btn-primary {
+    #gradient > .vertical(#669BBB, @linkColor);
+  }
+  .btn-primary:hover,
+  .btn-primary:active,
+  .btn-primary.active,
+  .btn-primary.disabled,
+  .btn-primary[disabled] {
+    background-color: @linkColor;
+  }
 
-.btn {
-  padding: 1px 5px;
-}
-
-/* Box Sizing fixes */
-.dropdown-menu .divider {
-  height: 2px;
+  /* Box Sizing fixes */
+  .dropdown-menu .divider {
+    height: 2px;
+  }
 }
